--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+
+    </header>
+    
     <nav></nav>
     <script src="/main.js"></script>
 </body>
