--- a/index.html
+++ b/index.html
@@ -3,15 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grupo Viver Mais</title>
+    <link rel="shortcut icon" href="./assets/img/logo.svg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg sticky-top bg-light shadow">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="./assets/img/logo.svg" alt="Logo" width="140" height="70">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto gap-3 fs-5">
+                <li class="nav-item text-center">
+                <a class="nav-link" href="#quem-somos">Quem Somos</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Estatuto</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Transparência</a>
+                </li>
+            </ul>
+            <div class="ms-5">
+                <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#" role="button">Apoie o Grupo</a>
+            </div>
+            </div>
+        </div>
+    </nav>
     <header>
-
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col 5 p-5 m-5">
+                    <h1>Grupo de Idosos Viver Mais</h1>
+                    <p>Há duas décadas promovendo dignidade, autonomia <br> e longevidade!</p>
+                    <p>Faça parte dessa história.</p>
+                    <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#" role="button">Apoie o Grupo</a>
+                </div>
+                <div class="col pt-5 pe-0 me-0">
+                    <img class="img-fluid" src="./assets/img/banner.png" alt="">
+                </div>
+            </div>
+        </div>
     </header>
-    
-    <nav></nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/main.js"></script>
 </body>
 </html>
