--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col 5 p-5 m-5">
-                    <h1>Grupo de Idosos Viver Mais</h1>
+                    <h1 class="h1-header">Grupo de Idosos Viver Mais</h1>
                     <p class="p-home">Há duas décadas promovendo dignidade, autonomia <br> e longevidade!</p>
                     <p class="p-home">Faça parte dessa história.</p>
                     <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#" role="button">Apoie o Grupo</a>
@@ -54,33 +54,50 @@
         </div>
     </header>
 
-    <section class="proposito" >
-        <div class="container-fluid pt-5 pb-5 ">
-            <div class="row">
-                <div class="col-5 d-flex align-items-center text-start ">
-                    <h2 class="text-conheca">Conheça nossos propósitos</h2>
-                </div>
-
-                <div class="col-7 d-flex ">
-                    <div class="missao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
-                       <img src="./assets/img/Frame_188.svg"  class="pb-3" alt="Flecha" width="100"> 
-                       <h3 class="text-proposito">Missão</h3>
-                       <p class="p-proposito text-center">Desenvolvimento social</p>
+    <main>
+        <section class="bg-white" id="quem-somos">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-4 mt-5">
+                        <img src="./img/cacto.png" alt="cacto vetor" class="img-fluid" width="250" height="180">
                     </div>
-                    <div class="visao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow">
-                        <img src="./assets/img/Frame_188_1.svg" class="pb-3" alt="Flecha" width="100"> 
-                       <h3 class="text-proposito">Visão</h3>
-                       <p class="p-proposito text-center">Impacto social</p>
-                    </div>
-                    <div class="valores d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
-                        <img src="./assets/img/Frame_188_2.svg" class="pb-3" alt="Flecha" width="100"> 
-                       <h3 class="text-proposito">Valores</h3>
-                       <p class="p-proposito text-center">Responsabilidade social</p>
+                    <div class="col-8">
+                        <h1 class="h1-quem">Quem Somos</h1>
+                        <p class="p-quem text-black">O Grupo de Idosos Viver Mais – GIVM, é uma organização da sociedade civil, sem fins lucrativos, que atua na cidade de Arcoverde em Pernambuco desde 2007, em favor das pessoas idosas, residentes nas áreas urbana e rural, que se encontram em situação de vulnerabilidade pessoal e social.</p>
+                        <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Saiba Mais</a>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <section class="proposito" >
+            <div class="container-fluid pt-5 pb-5 ">
+                <div class="row">
+                    <div class="col-5 d-flex align-items-center text-start ">
+                        <h2 class="text-conheca">Conheça nossos propósitos</h2>
+                    </div>
+                    <div class="col-7 d-flex ">
+                        <div class="missao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
+                            <img src="./assets/img/Frame_188.svg"  class="pb-3" alt="Flecha" width="100"> 
+                            <h3 class="text-proposito">Missão</h3>
+                            <p class="p-proposito text-center">Desenvolvimento social</p>
+                        </div>
+                        <div class="visao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow">
+                            <img src="./assets/img/Frame_188_1.svg" class="pb-3" alt="Flecha" width="100"> 
+                            <h3 class="text-proposito">Visão</h3>
+                            <p class="p-proposito text-center">Impacto social</p>
+                        </div>
+                        <div class="valores d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
+                            <img src="./assets/img/Frame_188_2.svg" class="pb-3" alt="Flecha" width="100"> 
+                            <h3 class="text-proposito">Valores</h3>
+                            <p class="p-proposito text-center">Responsabilidade social</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./js/script.js"></script>
 </body>
