fix: arruma erro das imagens, seção proposito

--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
                     </div>
                     <div class="col-7 d-flex ">
                         <div class="missao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
-                            <img src="./assets/img/Frame_188.svg"  class="pb-3" alt="Flecha" width="100"> 
+                            <img src="./img/Frame_188.svg"  class="pb-3" alt="Flecha" width="100"> 
                             <h3 class="text-proposito">Missão</h3>
                             <p class="p-proposito text-center">Desenvolvimento social</p>
                         </div>
                         <div class="visao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow">
-                            <img src="./assets/img/Frame_188_1.svg" class="pb-3" alt="Flecha" width="100"> 
+                            <img src="./img/Frame_188_1.svg" class="pb-3" alt="Olho" width="100"> 
                             <h3 class="text-proposito">Visão</h3>
                             <p class="p-proposito text-center">Impacto social</p>
                         </div>
                         <div class="valores d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
-                            <img src="./assets/img/Frame_188_2.svg" class="pb-3" alt="Flecha" width="100"> 
+                            <img src="./img/Frame_188_2.svg" class="pb-3" alt="Coração" width="100"> 
                             <h3 class="text-proposito">Valores</h3>
                             <p class="p-proposito text-center">Responsabilidade social</p>
                         </div>
