--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Grupo Viver Mais</title>
     <link rel="shortcut icon" href="./img/logo.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,22 +18,22 @@
             <a class="navbar-brand" href="index.html">
                 <img src="./img/logo.svg" alt="Logo" width="140" height="70">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler rounded-circle fs-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span><i class="bi bi-list fs-2 text-white"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto gap-3 fs-5">
-                    <li class="nav-item text-center">
+                <ul class="navbar-nav m-auto gap-0 gap-lg-3 p-3 p-lg-0 fs-5">
+                    <li class="nav-item">
                         <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">Quem Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Estatuto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Transparência</a>
+                        <a class="nav-link" href="">Transparência</a>
                     </li>
                 </ul>
-                <div class="ms-5">
+                <div class="ms-lg-5 pb-3 pb-lg-0">
                     <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#" role="button">Apoie o Grupo</a>
                 </div>
             </div>
