style: atualiza padronização de nomes de arquivo de imagem

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </div>
                     <div class="col-7 d-flex ">
                         <div class="missao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
-                            <img src="./img/Frame_188.svg"  class="pb-3" alt="Flecha" width="100"> 
+                            <img src="./img/flecha-e-alvo.svg"  class="pb-3" alt="Flecha" width="100"> 
                             <h3 class="text-proposito">Missão</h3>
                             <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal1">Desenvolvimento social</a>
                             <!-- Modal -->
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="visao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow">
-                            <img src="./img/Frame_188_1.svg" class="pb-3" alt="Olho" width="100"> 
+                            <img src="./img/olho.svg" class="pb-3" alt="Olho" width="100"> 
                             <h3 class="text-proposito">Visão</h3>
                             <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal2">Impacto social</a>
                             <!-- Modal -->
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                         <div class="valores d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
-                            <img src="./img/Frame_188_2.svg" class="pb-3" alt="Coração" width="100"> 
+                            <img src="./img/coracao.svg" class="pb-3" alt="Coração" width="100"> 
                             <h3 class="text-proposito">Valores</h3>
                             <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal3">Responsabilidade social</a>
                             <!-- Modal -->
