--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arsenal:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg sticky-top bg-light shadow">
+    <nav class="navbar navbar-expand-lg sticky-top bg-light shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="./img/logo.svg" alt="Logo" width="140" height="70">
@@ -55,14 +56,14 @@
     </div>
     <header>
         <div class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col 5 p-5 m-5">
-                    <h1 class="h1-header">Grupo de Idosos Viver Mais</h1>
-                    <p class="p-home">Há duas décadas promovendo dignidade, autonomia <br> e longevidade!</p>
-                    <p class="p-home">Faça parte dessa história.</p>
-                    <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#" role="button">Apoie o Grupo</a>
+            <div class="row align-items-center header">
+                <div class="col-6 ps-5 ms-5">
+                    <h1 class="h1-header display-3">Grupo de Idosos Viver Mais</h1>
+                    <p class="p-home fs-5">Há duas décadas promovendo dignidade, autonomia <br> e longevidade!</p>
+                    <p class="p-home fs-5">Faça parte dessa história.</p>
+                    <a class="btn btn-primary btn-lg rounded-5 ps-4 pe-4 pt-3 pb-3 button border-0 fs-" href="#" role="button">Apoie o Grupo</a>
                 </div>
-                <div class="col pt-5 pe-0 me-0">
+                <div class="col-6 pt-5 mt-2 pe-0 me-0">
                     <img class="img-fluid" src="./img/banner.png" alt="">
                 </div>
             </div>
