--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <header>
         <div class="container-fluid">
             <div class="row align-items-center header">
-                <div class="col-6 ps-5 ms-5">
+                <div class="col ps-5 ms-5">
                     <h1 class="h1-header display-3">Grupo de Idosos Viver Mais</h1>
                     <p class="p-home fs-5">Há duas décadas promovendo dignidade, autonomia <br> e longevidade!</p>
                     <p class="p-home fs-5">Faça parte dessa história.</p>
                     <a class="btn btn-primary btn-lg rounded-5 ps-4 pe-4 pt-3 pb-3 button border-0 fs-" href="#" role="button">Apoie o Grupo</a>
                 </div>
-                <div class="col-6 pt-5 mt-2 pe-0 me-0">
+                <div class="col pt-5 mt-2 pe-0 me-0">
                     <img class="img-fluid" src="./img/banner.png" alt="">
                 </div>
             </div>
@@ -103,69 +103,73 @@
         </section>
 
         <section class="proposito" >
-            <div class="container-fluid pt-5 pb-5 ">
+            <div class="container-fluid p-5 ms-5 ">
                 <div class="row">
-                    <div class="col-5 d-flex align-items-center text-start ">
-                        <h2 class="text-conheca">Conheça nossos propósitos</h2>
+                    <div class="col-4 d-flex align-items-center text-start">
+                        <h2 class="text-conheca display-3 lh-1">Conheça nossos Propósitos</h2>
                     </div>
-                    <div class="col-7 d-flex ">
-                        <div class="missao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
-                            <img src="./img/flecha-e-alvo.svg"  class="pb-3" alt="Flecha" width="100"> 
-                            <h3 class="text-proposito">Missão</h3>
-                            <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal1">Desenvolvimento social</a>
-                            <!-- Modal -->
-                            <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
-                                <div class="modal-dialog">
-                                <div class="modal-content rounded-4">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel1">Missão</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <div class="col-8 d-flex gap-5">
+                        <div class="card missao text-center rounded-4 shadow border-0">
+                            <div class="card-body">
+                                <img src="./img/flecha-e-alvo.svg"  class="img-fluid pt-3 pb-3" alt="Flecha" width="100"> 
+                                <h3 class="text-proposito">Missão</h3>
+                                <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal1">Desenvolvimento social</a>
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                    <div class="modal-content rounded-4">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabel1">Missão</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Envolver socialmente as pessoas idosas que estão em situação de vulnerabilidade, estimulando seu desenvolvimento pessoal, familiar e social, oferecendo atividades coletivas para que possam envelhecer com mais dignidade, autonomia e longevidade.
+                                        </div>
                                     </div>
-                                    <div class="modal-body">
-                                        Envolver socialmente as pessoas idosas que estão em situação de vulnerabilidade, estimulando seu desenvolvimento pessoal, familiar e social, oferecendo atividades coletivas para que possam envelhecer com mais dignidade, autonomia e longevidade.
                                     </div>
-                                </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="visao d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow">
-                            <img src="./img/olho.svg" class="pb-3" alt="Olho" width="100"> 
-                            <h3 class="text-proposito">Visão</h3>
-                            <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal2">Impacto social</a>
-                            <!-- Modal -->
-                            <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
-                                <div class="modal-dialog">
-                                <div class="modal-content rounded-4">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabe2">Visão</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <div class="card border-0 visao text-center rounded-4 shadow">
+                            <div class="card-body">
+                                <img src="./img/olho.svg" class="img-fluid pt-3 pb-3" alt="Olho" width="100"> 
+                                <h3 class="text-proposito">Visão</h3>
+                                <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal2">Impacto social</a>
+                                <!-- Modal -->
+                                <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                    <div class="modal-content rounded-4">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabe2">Visão</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Ser uma organização da sociedade civil reconhecida nacionalmente, pelo impacto social na vida das pessoas idosas vulneráveis socialmente em virtude da humanização, eficiência e excelência dos serviços prestados.
+                                        </div>
                                     </div>
-                                    <div class="modal-body">
-                                        Ser uma organização da sociedade civil reconhecida nacionalmente, pelo impacto social na vida das pessoas idosas vulneráveis socialmente em virtude da humanização, eficiência e excelência dos serviços prestados.
                                     </div>
-                                </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="valores d-flex flex-column align-items-center rounded-4 p-3 pt-4 shadow" >
-                            <img src="./img/coracao.svg" class="pb-3" alt="Coração" width="100"> 
-                            <h3 class="text-proposito">Valores</h3>
-                            <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal3">Responsabilidade social</a>
-                            <!-- Modal -->
-                            <div class="modal fade " id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
-                                <div class="modal-dialog">
-                                <div class="modal-content rounded-4">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabe3">Valores</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <div class="card border-0 valores text-center rounded-4 shadow" >
+                            <div class="card-body">
+                                <img src="./img/coracao.svg" class="img-fluid pt-3 pb-3" alt="Coração" width="100"> 
+                                <h3 class="text-proposito">Valores</h3>
+                                <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal3">Responsabilidade social</a>
+                                <!-- Modal -->
+                                <div class="modal fade " id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                    <div class="modal-content rounded-4">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabe3">Valores</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            Respeito; Ética;<br> Cuidado; Excelência;<br> Felicidade Pessoal;<br> Criatividade; Atendimento Humanizado; Respeito<br> à Diversidade; Transparência; Responsabilidade Social.
+                                        </div>
                                     </div>
-                                    
-                                    <div class="modal-body">
-                                        Respeito; Ética;<br> Cuidado; Excelência;<br> Felicidade Pessoal;<br> Criatividade; Atendimento Humanizado; Respeito<br> à Diversidade; Transparência; Responsabilidade Social.
-                                    </div>
-                                    
                                 </div>
-                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
