--- a/index.html
+++ b/index.html
@@ -113,64 +113,62 @@
                             <div class="card-body">
                                 <img src="./img/flecha-e-alvo.svg"  class="img-fluid pt-3 pb-3" alt="Flecha" width="100"> 
                                 <h3 class="text-proposito">Missão</h3>
-                                <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal1">Desenvolvimento social</a>
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                    <div class="modal-content rounded-4">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabel1">Missão</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            Envolver socialmente as pessoas idosas que estão em situação de vulnerabilidade, estimulando seu desenvolvimento pessoal, familiar e social, oferecendo atividades coletivas para que possam envelhecer com mais dignidade, autonomia e longevidade.
-                                        </div>
-                                    </div>
-                                    </div>
-                                </div>
+                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal1">Desenvolvimento social</a>
                             </div>
                         </div>
                         <div class="card border-0 visao text-center rounded-4 shadow">
                             <div class="card-body">
                                 <img src="./img/olho.svg" class="img-fluid pt-3 pb-3" alt="Olho" width="100"> 
                                 <h3 class="text-proposito">Visão</h3>
-                                <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal2">Impacto social</a>
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                    <div class="modal-content rounded-4">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabe2">Visão</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            Ser uma organização da sociedade civil reconhecida nacionalmente, pelo impacto social na vida das pessoas idosas vulneráveis socialmente em virtude da humanização, eficiência e excelência dos serviços prestados.
-                                        </div>
-                                    </div>
-                                    </div>
-                                </div>
+                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal2">Impacto social</a>
                             </div>
                         </div>
                         <div class="card border-0 valores text-center rounded-4 shadow" >
                             <div class="card-body">
                                 <img src="./img/coracao.svg" class="img-fluid pt-3 pb-3" alt="Coração" width="100"> 
                                 <h3 class="text-proposito">Valores</h3>
-                                <a class="a-proposito text-center" data-bs-toggle="modal" data-bs-target="#exampleModal3">Responsabilidade social</a>
-                                <!-- Modal -->
-                                <div class="modal fade " id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                    <div class="modal-content rounded-4">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabe3">Valores</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            Respeito; Ética;<br> Cuidado; Excelência;<br> Felicidade Pessoal;<br> Criatividade; Atendimento Humanizado; Respeito<br> à Diversidade; Transparência; Responsabilidade Social.
-                                        </div>
-                                    </div>
-                                </div>
+                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal3">Responsabilidade social</a>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Modais -->
+            <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content rounded-4">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel1">Missão</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Envolver socialmente as pessoas idosas que estão em situação de vulnerabilidade, estimulando seu desenvolvimento pessoal, familiar e social, oferecendo atividades coletivas para que possam envelhecer com mais dignidade, autonomia e longevidade.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content rounded-4">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabe2">Visão</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Ser uma organização da sociedade civil reconhecida nacionalmente, pelo impacto social na vida das pessoas idosas vulneráveis socialmente em virtude da humanização, eficiência e excelência dos serviços prestados.
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="modal fade " id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel3" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content rounded-4">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabe3">Valores</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Respeito; Ética;<br> Cuidado; Excelência;<br> Felicidade Pessoal;<br> Criatividade; Atendimento Humanizado; Respeito<br> à Diversidade; Transparência; Responsabilidade Social.
                     </div>
                 </div>
             </div>
