fix: remove scroll horizontal

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </header>
 
     <main>
+        <!--quem somos-->
         <section class="bg-white" id="quem-somos">
             <div class="container">
                 <div class="row align-items-center">
@@ -101,9 +102,9 @@
                 </div>
             </div>
         </section>
-
+        <!--conheça nossos porpósitos-->
         <section class="proposito" >
-            <div class="container-fluid p-5 ms-5 ">
+            <div class="container-fluid p-5">
                 <div class="row">
                     <div class="col-4 d-flex align-items-center text-start">
                         <h2 class="text-conheca display-3 lh-1">Conheça nossos Propósitos</h2>
