--- a/index.html
+++ b/index.html
@@ -54,16 +54,17 @@
         </div>
         </div>
     </div>
+
     <header>
         <div class="container-fluid">
             <div class="row align-items-center header">
-                <div class="col ps-5 ms-5">
-                    <h1 class="h1-header display-3">Grupo de Idosos Viver Mais</h1>
-                    <p class="p-home fs-5">Há duas décadas promovendo dignidade, autonomia <br> e longevidade!</p>
+                <div class="col p-4 pt-5 ps-lg-5 ms-lg-5">
+                    <h1 class="h1-header display-3">Grupo de Idosos <span class="h1-span">Viver Mais</span></h1>
+                    <p class="p-home fs-5">Há duas décadas promovendo dignidade, autonomia e longevidade!</p>
                     <p class="p-home fs-5">Faça parte dessa história.</p>
-                    <a class="btn btn-primary btn-lg rounded-5 ps-4 pe-4 pt-3 pb-3 button border-0 fs-" href="#" role="button">Apoie o Grupo</a>
+                    <a class="btn btn-lg rounded-5 ps-4 pe-4 pt-3 pb-3 button border-0 text-white" href="" role="button">Apoie o Grupo</a>
                 </div>
-                <div class="col pt-5 mt-2 pe-0 me-0">
+                <div class="col pt-lg-5 mt-lg-2 pe-lg-0 me=lg-0 mt-0">
                     <img class="img-fluid" src="./img/banner.png" alt="">
                 </div>
             </div>
