--- a/index.html
+++ b/index.html
@@ -75,31 +75,31 @@
         <!--quem somos-->
         <section class="bg-white" id="quem-somos">
             <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-4 mt-5">
+                <div class="row align-items-center about">
+                    <div class="col-4 mt-5 mb-0 mb-lg-5">
                         <img src="./img/cacto.png" alt="cacto vetor" class="img-fluid" width="250" height="180">
                     </div>
-                    <div class="col-8">
+                    <div class="col-8 mt-5 mb-5">
                         <h1 class="h1-quem">Quem Somos</h1>
                         <p class="p-quem text-black">O Grupo de Idosos Viver Mais – GIVM, é uma organização da sociedade civil, sem fins lucrativos, que atua na cidade de Arcoverde em Pernambuco desde 2007, em favor das pessoas idosas, residentes nas áreas urbana e rural, que se encontram em situação de vulnerabilidade pessoal e social.</p>
                         <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">Saiba Mais</a>
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel4" aria-hidden="true">
-                            <div class="modal-dialog">
-                            <div class="modal-content rounded-4">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel4">Quem Somos</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o trabalho do “Cantinho o Idoso” com um pequeno grupo de idosos moradores do Bairro São Cristóvão.  <br>
-                                    Nossa maior atenção volta-se a políticas promotoras de inclusão social e política socioassistencial, vistas como direito do cidadão e dever do Estado. Através da criação de novos valores, maneiras de pensar, sentir e de agir, tornando fáceis as transformações e modificações dessas relações sociais que vão a cada dia enriquecendo-se mais. <br>
-                                    Com esse carisma de atender indistintamente à pessoa idosa, foi conquistando os seus familiares, vizinhos e amigos a apoiarem no desenvolvimento de ações promotoras do direito da pessoa idosa, através de um Serviço de Convivência. O GIVM tem como missão envolver socialmente as pessoas idosas, fazendo com que elas se sintam parte da sociedade e obtenham maior qualidade de vida aos seus dias. 
-                                </div>
-                            </div>
-                            </div>
-                        </div>
                     </div>
+                </div>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel4" aria-hidden="true">
+                <div class="modal-dialog">
+                <div class="modal-content rounded-4">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel4">Quem Somos</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Movida pela empatia à pessoa idosa, numa atitude de solidariedade, Assunção Lucas iniciou o trabalho do “Cantinho o Idoso” com um pequeno grupo de idosos moradores do Bairro São Cristóvão.  <br>
+                        Nossa maior atenção volta-se a políticas promotoras de inclusão social e política socioassistencial, vistas como direito do cidadão e dever do Estado. Através da criação de novos valores, maneiras de pensar, sentir e de agir, tornando fáceis as transformações e modificações dessas relações sociais que vão a cada dia enriquecendo-se mais. <br>
+                        Com esse carisma de atender indistintamente à pessoa idosa, foi conquistando os seus familiares, vizinhos e amigos a apoiarem no desenvolvimento de ações promotoras do direito da pessoa idosa, através de um Serviço de Convivência. O GIVM tem como missão envolver socialmente as pessoas idosas, fazendo com que elas se sintam parte da sociedade e obtenham maior qualidade de vida aos seus dias. 
+                    </div>
+                </div>
                 </div>
             </div>
         </section>
