refactor: aplicanção das sugestões do PR

--- a/index.html
+++ b/index.html
@@ -407,30 +407,36 @@
     </main>
     <!--rodapé-->
     <footer class="rodape mt-5">
-        <div class="container-fluid row align-items-center py-5">
-            <div class="col-5">
-                <img class="img-fluid rodape-marca" src="./img/Marca 03.png" alt="">
-                <p class="rodape-text fs-4 pt-3 w-75 rodape-main-text">fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.</p>
+        <div class="container">
+            <div class="row align-items-center py-5">
+                <div class="col-12 col-md-5">
+                    <img class="img-fluid rodape-marca" style="width: 100px;" src="./img/Marca 03.png" alt="Logo marca do Grupo Viver Mais">
+                    <p class="fs-4 pt-3 w-75 rodape-main-text">fortalecendo os vínculos, diminuindo riscos
+                        sociais e celebrando a vida.</p>
+                </div>
+                <div class="col-12 col-md rodape-links pt-4">
+                    <h3 class="rodape-text">Links</h3>
+                    <p class="rodape-p">Quem Somos</p>
+                    <p class="rodape-p">Estatuto</p>
+                    <P class="rodape-p">Transparência</P>
+                </div>
+                <div class="col-12 col-md pt-4">
+                    <h3 class="rodape-text">Contatos</h3>
+                    <p class="rodape-p">E-mail: liziane_lucas@hotmail.com</p>
+                    <p class="rodape-p"><span class="me-2"><img src="./img/whatsapp.png" alt="Icone de Telefone"></span>Telefone: +55 81
+                        99991-5266</p>
+                    <p class="rodape-p"><span class="me-2"><img src="./img/instagram.png" alt="Icone do Instagram"></span>Instagram: <a
+                            class="text-black" href="https://www.instagram.com/grupovivermais/?hl=pt-br"
+                            target="_blank">@grupovivermais</a></p>
+                </div>
             </div>
-            <div class="col rodape-links">
-                <h3 class="rodape-text">Links</h3>
-                <p class="rodape-p">Quem Somos</p>
-                <p class="rodape-p">Estatuto</p>
-                <P class="rodape-p">Transparência</P>
-            </div>
-            <div class="col">
-                <h3 class="rodape-text">Contatos</h3>
-                <p class="rodape-p">E-mail: liziane_lucas@hotmail.com</p>
-                <p class="rodape-p"><span class="me-2"><img src="./img/whatsapp.png" alt=""></span>Telefone: +55 81 99991-5266</p>
-                <p class="rodape-p"><span class="me-2"><img src="./img/instagram.png" alt=""></span>Instagram: <a class="text-black" href="https://www.instagram.com/grupovivermais/?hl=pt-br" target="_blank">@grupovivermais</a></p>
-            </div>
-        </div>
-        <hr class="rodape-linha">
-        <div class="row">
-            <div class="d-flex gap-1 my-3">
-                <a href="#"><img src="./img/linkedin-cinza.png" alt=""></a>
-                <a href="#"><img src="./img/instagram-cinza.png" alt=""></a>
-                <p>Todos os direitos reservados para Grupo Símios</p>
+            <hr class="rodape-linha">
+            <div class="row">
+                <div class="d-flex gap-1 my-3">
+                    <a href="#"><img src="./img/linkedin-cinza.png" alt="Icone do Likedin"></a>
+                    <a href="#"><img src="./img/instagram-cinza.png" alt="Icone do Instagram"></a>
+                    <p>Todos os direitos reservados para Grupo Símios</p>
+                </div>
             </div>
         </div>
     </footer>
