fix: adição de links que estavam faltando.

--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
             <hr class="rodape-linha">
             <div class="row">
                 <div class="d-flex gap-1 my-3">
-                    <a href="#"><img src="./img/linkedin-cinza.png" alt="Icone do Likedin"></a>
-                    <a href="#"><img src="./img/instagram-cinza.png" alt="Icone do Instagram"></a>
+                    <a href="https://www.linkedin.com/company/grupo-s%C3%ADmios/" target="_blank"><img src="./img/linkedin-cinza.png" alt="Icone do Likedin"></a>
+                    <a href="https://www.instagram.com/gruposimios?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="./img/instagram-cinza.png" alt="Icone do Instagram"></a>
                     <p>Todos os direitos reservados para Grupo Símios</p>
                 </div>
             </div>
