fix: ajusta section propositos

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <section class="proposito">
             <div class="container-fluid p-5">
                 <div class="row">
-                    <div class="col-12 col-md-4 d-flex align-items-center text-start">
+                    <div class="col-12 col-md-4 d-flex align-items-center text-start pb-4 pb-md-0">
                         <h2 class="text-conheca display-3 lh-1">Conheça nossos Propósitos</h2>
                     </div>
                     <div class="col-12 col-md-8 d-flex justify-content-center flex-column flex-md-row gap-5 m-auto">
