feat: adiciona pagina do grupo simios com equipe

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <a href="https://www.instagram.com/gruposimios/" target="_blank">
                         <img src="./img/social/instagram-cinza.png" alt="Icone do Instagram">
                     </a>
-                    <p>Todos os direitos reservados para Grupo Símios</p>
+                    <p>Todos os direitos reservados para <a href="./grupo-simios.html">Grupo Símios</a></p>
                 </div>
             </div>
         </div>
