fix: Ajuste de espaçamentos/responsividade e adição de imagem na secão 'nossa esquipe'.

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
     </div>
     <header>
         <div class="container-fluid">
-            <div class="row align-items-center header flex-column flex-sm-row">
-                <div class="col p-4 pt-5 mt-4 mt-md-0 ps-lg-5 ms-lg-5 pb-2">
+            <div class="row align-items-end align-items-xl-center header flex-column flex-sm-row">
+                <div class="col p-4 py-5 mt-4 mt-md-0 ps-lg-5 ms-sm-5">
                     <h1 class="h1-header display-3">Grupo de Idosos Viver Mais</h1>
                     <p class="p-home fs-5">Há duas décadas promovendo dignidade, autonomia e longevidade!</p>
                     <p class="p-home fs-5">Faça parte dessa história.</p>
-                    <a class="btn btn-lg rounded-5 ps-4 pe-4 pt-3 pb-3 button border-0 text-white" href="#apoia"
+                    <a class="btn btn-lg rounded-5 px-4 pt-3 pb-3 button border-0 text-white" href="#apoia"
                         role="button">Apoie o Grupo</a>
                 </div>
-                <div class="col pt-md-5 pt-0 mt-3 pe-0 me-0 ">
+                <div class="col pt-0 mt-lg-5 pe-0 me-0 m-0 mb-md-0 d-flex justify-content-end">
                     <img class="img-fluid" src="./img/banner.png" alt="">
                 </div>
             </div>
@@ -229,7 +229,7 @@
                     <div class="col-4 mt-5 col-projetos text-center pb-0">
                         <img class="img-fluid img-projetos" src="./img/cacto-sol.png" alt="">
                     </div>
-                    <div class="col-6 col-projetos mb-4 mb-md-0">
+                    <div class="col-6 col-projetos my-4 mb-md-0 px-5">
                         <h2 class="h-projetos display-3">Projetos</h2>
                         <p class="p-projetos">Nosso Grupo conta com diversos projetos acontecendo simultaneamente sempre alinhados com a nossa missão, visão e valores.</p>
                         <p class="p-projetos">Alguns de nossos projetos:  listar aqui 1, listar aqui 2, listar aqui 3.</p>
@@ -319,15 +319,15 @@
         </section>
         <!--nossa equipe-->
         <section>
-            <div class="container pt-5 pb-5">
-                <div class="row align-items-center">
-                    <div class="col-5">
+            <div class="container-fluid">
+                <div class="row align-items-end align-items-lg-center">
+                    <div class="col-12 col-md-5 pb-0 pb-md-5 px-5 py-5">
                         <h2 class="display-5 title-equipe">Nossa Equipe</h2>
                         <p class="p-equipe">O Grupo de Idosos Viver mais conta com uma equipe multidisciplinar pronta para atender e focar na melhor forma de celebrar a vida.</p>
                         <p class="p-equipe">Nossos profissionais são: Psicólogos, Fisioterapeutas, etc etc tec (tem que perguntar)</p>
                     </div>
-                    <div class="col-7 text-center">
-                        <img class="img-fluid" src="" alt="">
+                    <div class="col-12 col-md-7 text-center px-0 pt-md-4 d-flex justify-content-end">
+                        <img class="img-fluid" src="./img/equipe/imagem sessao equipe.png" alt="">
                     </div>
                 </div>
             </div>
@@ -335,7 +335,7 @@
         <!--apoia-->
         <section class="apoia pt-4" id="apoia">
             <div class="row container-fluid align-items-end pe-0">
-                <div class="col-12 text-apoia col-md-6 py-4 mb-md-3 mb-0">
+                <div class="col-12 text-apoia col-md-6 py-4 mb-md-3 mb-0 px-5">
                     <h1 class="h1-apoia">Apoie o GIVM</h1>
                     <P class="p-apoia">Ao contribuir financeiramente para nossa ONG, você se torna parte fundamental da
                         transformação positiva na vida de pessoas idosas. Sua doação proporciona recursos para as nossas
