refactor: refina legibilidade do html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 </ul>
                 <div class="ms-lg-5 pb-3 pb-lg-0">
                     <a class="btn btn-primary rounded-5 ps-4 pe-4 pt-2 pb-2 button border-0 fs-5" href="#apoia"
-                        role="button">Apoie o Grupo</a>
+                        role="button">Apoie o Grupo
+                    </a>
                 </div>
             </div>
         </div>
@@ -150,16 +151,18 @@
                                 <img src="./img/icons/flecha-e-alvo.svg" class="img-fluid pt-3 pb-3" alt="Flecha"
                                     width="100">
                                 <h3 class="text-proposito">Missão</h3>
-                                <a class="a-proposito" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal1">Desenvolvimento social</a>
+                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal1">
+                                    Desenvolvimento social
+                                </a>
                             </div>
                         </div>
                         <div class="card border-0 visao text-center rounded-4 shadow">
                             <div class="card-body">
                                 <img src="./img/icons/olho.svg" class="img-fluid pt-3 pb-3" alt="Olho" width="100">
                                 <h3 class="text-proposito">Visão</h3>
-                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal2">Impacto
-                                    social</a>
+                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                                    Impacto social
+                                </a>
                             </div>
                         </div>
                         <div class="card border-0 valores text-center rounded-4 shadow">
@@ -167,8 +170,9 @@
                                 <img src="./img/icons/coracao.svg" class="img-fluid pt-3 pb-3" alt="Coração"
                                     width="100">
                                 <h3 class="text-proposito">Valores</h3>
-                                <a class="a-proposito" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal3">Responsabilidade social</a>
+                                <a class="a-proposito" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                                    Responsabilidade social
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -231,8 +235,13 @@
                     </div>
                     <div class="col-6 col-projetos my-4 mb-md-0 px-5">
                         <h2 class="h-projetos display-3">Projetos</h2>
-                        <p class="p-projetos">Nosso Grupo conta com diversos projetos acontecendo simultaneamente sempre alinhados com a nossa missão, visão e valores.</p>
-                        <p class="p-projetos">Alguns de nossos projetos:  listar aqui 1, listar aqui 2, listar aqui 3.</p>
+                        <p class="p-projetos">
+                            Nosso Grupo conta com diversos projetos acontecendo simultaneamente sempre
+                            alinhados com a nossa missão, visão e valores.
+                        </p>
+                        <p class="p-projetos">
+                            Alguns de nossos projetos: listar aqui 1, listar aqui 2, listar aqui 3.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -323,8 +332,13 @@
                 <div class="row align-items-end align-items-lg-center">
                     <div class="col-12 col-md-5 pb-0 pb-md-5 px-5 py-5">
                         <h2 class="display-5 title-equipe">Nossa Equipe</h2>
-                        <p class="p-equipe">O Grupo de Idosos Viver mais conta com uma equipe multidisciplinar pronta para atender e focar na melhor forma de celebrar a vida.</p>
-                        <p class="p-equipe">Nossos profissionais são: Psicólogos, Fisioterapeutas, etc etc tec (tem que perguntar)</p>
+                        <p class="p-equipe">
+                            O Grupo de Idosos Viver mais conta com uma equipe multidisciplinar pronta
+                            para atender e focar na melhor forma de celebrar a vida.
+                        </p>
+                        <p class="p-equipe">
+                            Nossos profissionais são: Psicólogos, Fisioterapeutas, etc etc tec (tem que perguntar)
+                        </p>
                     </div>
                     <div class="col-12 col-md-7 text-center px-0 pt-md-4 d-flex justify-content-end">
                         <img class="img-fluid" src="./img/equipe/imagem sessao equipe.png" alt="">
@@ -337,18 +351,22 @@
             <div class="row container-fluid align-items-end pe-0">
                 <div class="col-12 text-apoia col-md-6 py-4 mb-md-3 mb-0 px-5">
                     <h1 class="h1-apoia">Apoie o GIVM</h1>
-                    <P class="p-apoia">Ao contribuir financeiramente para nossa ONG, você se torna parte fundamental da
+                    <p class="p-apoia">
+                        Ao contribuir financeiramente para nossa ONG, você se torna parte fundamental da
                         transformação positiva na vida de pessoas idosas. Sua doação proporciona recursos para as nossas
                         atividades. Sua generosidade também é a força que faz a diferença por trás do impacto positivo
-                        que construímos há duas décadas.</P>
+                        que construímos há duas décadas.
+                    </p>
                 </div>
                 <div
                     class="col-12 col-md-5 py-5 d-flex flex-column flex-md-row align-items-center pe-0 ps-lg-5 ps-3 mb-3 pt-0 pb-2 pb-md-5">
                     <img src="img/qr-code.svg" alt="QR Code do Pix" style="width: 120px;">
                     <div class="apoia-text pt-3 ps-3">
                         <h2 class="h2-apoia mb-0">Pix - QR Code</h2>
-                        <p class="p-apoia">Banco de tal <br>CNPJ - 11.111/0001-11 <br> Nome da Instituição como aparece
-                            no Banco</p>
+                        <p class="p-apoia">Banco de tal</p>
+                        <p class="p-apoia">CNPJ - 11.111/0001-11</p>
+                        <p class="p-apoia">Banco de tal</p>
+                        <p class="p-apoia">Nome da Instituição como aparece no Banco</p>
                     </div>
                 </div>
                 <div class="col-1 d-inline text-end d-none d-md-inline m-0 p-0">
@@ -364,8 +382,9 @@
                 <div class="col-12 col-md-5">
                     <img class="img-fluid rodape-marca" width="100px" src="./img/logo/logo-marca.png"
                         alt="Logo marca do Grupo Viver Mais">
-                    <p class="fs-4 pt-3 w-75 rodape-main-text">fortalecendo os vínculos, diminuindo riscos sociais e
-                        celebrando a vida.</p>
+                    <p class="fs-4 pt-3 w-75 rodape-main-text">
+                        fortalecendo os vínculos, diminuindo riscos sociais e celebrando a vida.
+                    </p>
                 </div>
                 <div class="col-12 col-md rodape-links pt-4">
                     <h3 class="rodape-text">Links</h3>
