feat: Estiliza header e section projetos.

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -74,15 +74,15 @@
         </div>
     </div>
     <!--header-->
-    <header>
-        <div class="container">
+    <header class="header-grupo pt-4 pb-5">
+        <div class="container ">
             <div class="row align-items-center header flex-column flex-sm-row">
-                <div class="col-8 pe-5">
-                    <h1 class="display-3">Grupo Símios</h1>
-                    <p class="fs-5">O Grupo Símios é um coletivo de desenvolvimento profissional, que busca aprimorar habilidades profissionais através do engajamento em projetos voluntários, como o auxílio na criação de websites institucionais para ONGs em todo o Brasil.</p>
+                <div class="col-8 ps-5">
+                    <h1 class="h-grupo display-3 ">Site desenvolvido voluntariamente pelo Grupo Símios</h1>
+                    <p class="p-grupo ">O Grupo Símios é um coletivo de desenvolvimento profissional, que busca aprimorar habilidades profissionais através do engajamento em projetos voluntários, como o auxílio na criação de websites institucionais para ONGs em todo o Brasil.</p>
                 </div>
                 <div class="col-4">
-                    <img class="img-fluid" src="./img/logo-simios.png" alt="">
+                    <img class="img-grupo img-fluid" src="./img/grupo-simios/logo-simios.png" alt="">
                 </div>
             </div>
         </div>
@@ -96,9 +96,9 @@
                         <img class="img-fluid" src="./img/cacto-sol.png" alt="">
                     </div>
                     <div class="col-6 mb-4 mb-md-0">
-                        <h2 class="display-4">Projeto ONGs na Web</h2>
-                        <p class="">O primeiro projeto do coletivo é o ONGs na WEB, com o propósito de auxiliar organizações não governamentais a terem um site de apresentação para aumentar sua visibilidade.</p>
-                        <p>Esta iniciativa nasceu da necessidade dos desenvolvedores e web designers de aplicar seus conhecimentos e construir portfólios, ao mesmo tempo em que reconhecemos a invisibilidade enfrentada por muitas ONGs no Brasil que não possuem recursos para ter uma presença online. Nosso objetivo é aprimorar nossas habilidades e portfólio enquanto ajudamos instituições necessitadas.</p>
+                        <h2 class="h-projetos display-4">Projeto ONGs na Web</h2>
+                        <p class="p-projetos">O primeiro projeto do coletivo é o ONGs na WEB, com o propósito de auxiliar organizações não governamentais a terem um site de apresentação para aumentar sua visibilidade.</p>
+                        <p class="p-projetos">Esta iniciativa nasceu da necessidade dos desenvolvedores e web designers de aplicar seus conhecimentos e construir portfólios, ao mesmo tempo em que reconhecemos a invisibilidade enfrentada por muitas ONGs no Brasil que não possuem recursos para ter uma presença online. Nosso objetivo é aprimorar nossas habilidades e portfólio enquanto ajudamos instituições necessitadas.</p>
                     </div>
                 </div>
             </div>
@@ -108,8 +108,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col mb-5 mt-5">
-                        <h2>Equipe</h2>
-                        <p>Conheça o time responsável pela criação e desenvolvimento do site do Grupo de Idosos Viver Mais.</p>
+                        <h2 class="title-equipe">Equipe</h2>
+                        <p class="p-equipe">Conheça o time responsável pela criação e desenvolvimento do site do Grupo de Idosos Viver Mais.</p>
                     </div>
                 </div>
                 <div class="row align-items-center">
