feat: Estiliza ultima section

--- a/grupo-simios.html
+++ b/grupo-simios.html
@@ -74,11 +74,11 @@
         </div>
     </div>
     <!--header-->
-    <header class="header-grupo pt-4 pb-5">
+    <header class="header-grupo pt-4 pb-5 d-flex align-items-center justify-content-center">
         <div class="container ">
             <div class="row align-items-center header flex-column flex-sm-row">
                 <div class="col-8 ps-5">
-                    <h1 class="h-grupo display-3 ">Site desenvolvido voluntariamente pelo Grupo Símios</h1>
+                    <h1 class="h-grupo display-5 pb-2 ">Site desenvolvido voluntariamente pelo Grupo Símios</h1>
                     <p class="p-grupo ">O Grupo Símios é um coletivo de desenvolvimento profissional, que busca aprimorar habilidades profissionais através do engajamento em projetos voluntários, como o auxílio na criação de websites institucionais para ONGs em todo o Brasil.</p>
                 </div>
                 <div class="col-4">
@@ -90,15 +90,15 @@
     <main>
         <!--ongs da web-->
         <section>
-            <div class="container">
-                <div class="row align-items-center flex-column flex-sm-row">
-                    <div class="col-4 mt-5 text-center pb-0">
-                        <img class="img-fluid" src="./img/cacto-sol.png" alt="">
+            <div class="projetos container ">
+                <div class="row  flex-column flex-sm-row">
+                    <div class="col-4 mt-5 col-projetos text-center pb-0">
+                        <img class="img-fluid img-projetos pt-5 pb-0" src="./img/cacto-sol.png" alt="" width="316">
                     </div>
                     <div class="col-6 mb-4 mb-md-0">
-                        <h2 class="h-projetos display-4">Projeto ONGs na Web</h2>
-                        <p class="p-projetos">O primeiro projeto do coletivo é o ONGs na WEB, com o propósito de auxiliar organizações não governamentais a terem um site de apresentação para aumentar sua visibilidade.</p>
-                        <p class="p-projetos">Esta iniciativa nasceu da necessidade dos desenvolvedores e web designers de aplicar seus conhecimentos e construir portfólios, ao mesmo tempo em que reconhecemos a invisibilidade enfrentada por muitas ONGs no Brasil que não possuem recursos para ter uma presença online. Nosso objetivo é aprimorar nossas habilidades e portfólio enquanto ajudamos instituições necessitadas.</p>
+                        <h2 class="h-projetos display-4 pb-2 pt-5 mt-5 fs-0">Projeto ONGs na Web</h2>
+                        <p class="p-projetos pb-2 ">O primeiro projeto do coletivo é o ONGs na WEB, com o propósito de auxiliar organizações não governamentais a terem um site de apresentação para aumentar sua visibilidade.</p>
+                        <p class="p-projetos pb-3 ">Esta iniciativa nasceu da necessidade dos desenvolvedores e web designers de aplicar seus conhecimentos e construir portfólios, ao mesmo tempo em que reconhecemos a invisibilidade enfrentada por muitas ONGs no Brasil que não possuem recursos para ter uma presença online. Nosso objetivo é aprimorar nossas habilidades e portfólio enquanto ajudamos instituições necessitadas.</p>
                     </div>
                 </div>
             </div>
@@ -108,77 +108,77 @@
             <div class="container">
                 <div class="row">
                     <div class="col mb-5 mt-5">
-                        <h2 class="title-equipe">Equipe</h2>
-                        <p class="p-equipe">Conheça o time responsável pela criação e desenvolvimento do site do Grupo de Idosos Viver Mais.</p>
+                        <h2 class="title-equipe display-3">Equipe</h2>
+                        <p class="p-equipe p-card-projetos">Conheça o time responsável pela criação e desenvolvimento do site do Grupo de Idosos Viver Mais.</p>
                     </div>
                 </div>
-                <div class="row align-items-center">
-                    <div class="col d-flex gap-5 pb-5">
-                        <div class="card border-0 rounded-4 align-items-center pt-4" style="width: 18rem;">
-                            <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="row align-items-center ">
+                    <div class="col d-flex gap-5 pb-5 justify-content-center">
+                        <div class="card-equipe2 card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
+                            <img src="./img/grupo-simios/ana.png" class="card-img-top w-50" alt="...">
+                            <div class="card-body align-items-center">
+                                <h5 class="card-title title-card-projetos">Ana Martins</h5>
+                                <p class="card-text p-card-projetos">Organizadora do Coletivo e buscador de clientes</p>
                             </div>
                         </div>
-                        <div class="card border-0 rounded-4 align-items-center pt-4" style="width: 18rem;">
-                            <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="card-equipe2 card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
+                            <img src="./img/grupo-simios/erick.png" class="card-img-top w-50" alt="...">
+                            <div class="card-body align-items-center">
+                                <h5 class="card-title title-card-projetos">Erick Rosa</h5>
+                                <p class="card-text p-card-projetos">Organizador do Coletivo e Analista de Sistemas</p>
                             </div>
                         </div>
-                        <div class="card border-0 rounded-4 align-items-center pt-4" style="width: 18rem;">
-                            <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col d-flex gap-5 pb-5">
-                        <div class="card border-0 rounded-4 align-items-center pt-4" style="width: 18rem;">
-                            <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                        </div>
-                        <div class="card border-0 rounded-4 align-items-center pt-4" style="width: 18rem;">
-                            <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            </div>
-                        </div>
-                        <div class="card border-0 rounded-4 align-items-center pt-4" style="width: 18rem;">
-                            <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
+                            <img src="./img/grupo-simios/gabriel.png" class="card-img-top w-50" alt="...">
+                            <div class="card-body align-items-center">
+                                <h5 class="card-title title-card-projetos">Gabriel Santiago</h5>
+                                <p class="card-text p-card-projetos">Tester</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col d-flex gap-5 pb-5">
-                        <div class="card border-0 rounded-4 align-items-center pt-4" style="width: 18rem;">
-                            <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <div class="col d-flex gap-5 pb-5 justify-content-center">
+                        <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
+                            <img src="./img/grupo-simios/joao.png" class="card-img-top w-50" alt="...">
+                            <div class="card-body align-items-center">
+                                <h5 class="card-title title-card-projetos">João Arruda</h5>
+                                <p class="card-text p-card-projetos">Product Designer</p>
                             </div>
                         </div>
-                        <div class="card border-0 rounded-4 align-items-center pt-4" style="width: 18rem;">
-                            <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
+                            <img src="./img/grupo-simios/juan.png" class="card-img-top w-50" alt="...">
+                            <div class="card-body align-items-center">
+                                <h5 class="card-title title-card-projetos">Juan Mendes</h5>
+                                <p class="card-text p-card-projetos">Desenvolvedor Web Full Stack</p>
                             </div>
                         </div>
-                        <div class="card border-0 rounded-4 align-items-center pt-4" style="width: 18rem;">
+                        <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
+                            <img src="./img/grupo-simios/julie.png" class="card-img-top w-50" alt="...">
+                            <div class="card-body align-items-center">
+                                <h5 class="card-title title-card-projetos">Julie Godoi</h5>
+                                <p class="card-text p-card-projetos">Desenvolvedora web</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex gap-5 pb-5 justify-content-center">
+                        <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
+                            <img src="./img/grupo-simios/leonarda.png" class="card-img-top w-50" alt="...">
+                            <div class="card-body align-items-center">
+                                <h5 class="card-title title-card-projetos">Leonarda Oliveira</h5>
+                                <p class="card-text p-card-projetos">Desenvolvedora Front-End</p>
+                            </div>
+                        </div>
+                        <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
+                            <img src="./img/grupo-simios/luis.png" class="card-img-top w-50" alt="...">
+                            <div class="card-body align-items-center">
+                                <h5 class="card-title title-card-projetos">Luís Duarte</h5>
+                                <p class="card-text p-card-projetos">Documenter</p>
+                            </div>
+                        </div>
+                        <div class="card-equipe card border-0 rounded-4 align-items-center pt-4 text-center" style="width: 18rem;">
                             <img src="./img/grupo-simios/melissa.png" class="card-img-top w-50" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <div class="card-body align-items-center">
+                                <h5 class="card-title title-card-projetos">Melissa Almeida</h5>
+                                <p class="card-text p-card-projetos">UX/UI Designer</p>
                             </div>
                         </div>
                     </div>
